--- a/finalpayment.html
+++ b/finalpayment.html
@@ -4,7 +4,7 @@
 	<head>
 		<title>Checkout</title>
 		<link rel="icon" href="images/ff_ico.png">
-		<link rel="stylesheet" type="text/css" href="theme3.css">
+		<link rel="stylesheet" type="text/css" href="theme_finalpayment.css">
 	</head>
 	<body>
 		<header>
@@ -68,33 +68,33 @@
 			cart = [objProrate, objAdmin]
 			
 			function lumpsum() {
-				let a
-				for (let j = 0; j < cart7.length; j += 1) {
-					if (cart7[j].name === "Lumpsum") {
-						for (let k = 0; k < cart7.length; k += 1) {
-							if (cart7[k].name === "Lifestyle (12mo)") {
-								cart.push(lumpsum12)
-								if (cartPOS[0] !== undefined) {
-								cart.push(cartPOS[0])
-								}
-								console.log(cart)
-								return
-							}
-							if (cart7[k].name === "Premier (4mo)") {
-								cart.push(lumpsum4)
-								if (cartPOS[0] !== undefined) {
-								cart.push(cartPOS[0])
-								}
-								console.log(cart)
-								return
-							}
-					}
-					}
-					}
-				if (cartPOS[0] !== undefined) {
-					cart.push(cartPOS[0])
-					}
-				console.log(cart)
+                let a
+                for (let j = 0; j < cart7.length; j += 1) {
+                    if (cart7[j].name === "Lumpsum") {
+                        for (let k = 0; k < cart7.length; k += 1) {
+                            if (cart7[k].name === "Lifestyle (12mo)") {
+                                cart.push(lumpsum12)
+                                if (cartPOS[0] !== undefined) {
+                                    cart.push(cartPOS[0])
+                                }
+                                console.log(cart)
+                                return
+                            }
+                            if (cart7[k].name === "Premier (4mo)") {
+                                cart.push(lumpsum4)
+                                if (cartPOS[0] !== undefined) {
+                                    cart.push(cartPOS[0])
+                                }
+                                console.log(cart)
+                                return
+                            }
+                        }
+                    }
+                }
+                if (cartPOS[0] !== undefined) {
+                    cart.push(cartPOS[0])
+                }
+                console.log(cart)
 			}
 			
 			function getTotal() {
